--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.8.3",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "fast2sms": "^1.0.3",
+    "follow-redirects": "^1.15.9",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.7",
     "mongoose": "^7.5.0",
     "multer": "^2.0.2",
-    "stripe": "^18.3.0"
+    "stripe": "^18.3.0",
+    "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
